--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <h1>
     Welcome to the DOM Challenge
   </h1>
-  <h1 id='counter'>
-    0
-  </h1>
+  <h1 id='counter'>0</h1>
   <button id='-' > ➖ </button>
   <button id='+' > ➕ </button>
   <button id='<3' > ❤️ </button>
@@ -39,7 +37,7 @@
 
   </div>
 
-  <script src="index.min.js"></script>
+  <!-- <script src="index.min.js"></script>  -->
   <script src="challenge.js"></script>
 </body>
 </html>
